@@ -81,7 +81,7 @@ main.tutorial {
 
 dl {
   margin: 0;
-  padding-bottom: 2em;
+  padding-bottom: .5em;
   dt {
     font-weight: bold;
     abbr {
