@@ -4,13 +4,19 @@
 
 <p>KorAP bietet Zugriff auf mehrere Ebenen von Annotationen, die aus mehreren Ressourcen stammen, so genannten <em>foundries</em>.</p>
 
+
 <section id="base">
   <h3>Basis Foundry</h3>
-  <p>Die Basis Foundry steht allen Korpora zur Verfügung und dient als gemeinsame Grundlage für die Dokumentenstrukturannotation im layer <code>s</code>. Sie unterstützt drei Arten von Spans: <code>&lt;base/s=s&gt;</code> für Sätze, <code>&lt;base/s=p&gt;</code> für Absätze und <code>&lt;base/s=t&gt;</code> für den gesamten Text.</p>
+  <p>Die Basis Foundry steht allen Korpora zur Verfügung und dient als gemeinsame Grundlage für die Dokumentenstrukturannotation im layer <code>s</code>.</p>
+  <dl>
+    <dt><abbr data-type="token" title="Structure">s</abbr></dt>
+    <dd>Dokument Struktur, die folgende Spans unterstützt: <code>&lt;base/s=s&gt;</code> für Sätze, <code>&lt;base/s=p&gt;</code> für Paragraphen und <code>&lt;base/s=t&gt;</code> für die gesamte Textspanne.</dd>
+  </dl>
+
   %= doc_query poliqarp => '<base/s=s>', cutoff => 1
 </section>
 
-
+<!--
 <section id="cnx">
   <h3>Connexor (<code>cnx</code>)</h3>
   <p>Connexor-Annotationen liefern die folgenden Layer für das <code>cnx</ code> Präfix:</p>
@@ -28,15 +34,27 @@
   </dl>
   %= doc_query poliqarp => '[cnx/p=CC]', cutoff => 1
 </section>
+-->
+
+<section id="dereko">
+  <h3>DeReKo (<code>dereko</code>)</h3>
+  <p>DeReKo Annotationen unterstützen die folgenden Layer für das <code>dereko</code> Präfix:</p>
+  <dl>
+    <dt><abbr data-type="token" title="Structure">s</abbr></dt>
+    <dd>Dokument Struktur, wie sie im <%= doc_ext_link_to 'I5 Textmodell', 'http://www1.ids-mannheim.de/kl/projekte/korpora/textmodell.html' %> definiert ist.</dd>
+  </dl>
+  %= doc_query poliqarp => 'startsWith(<dereko/s=s>, Fragestunde)', cutoff => 1
+</section>
 
 
 <section id="corenlp">
   <h3>CoreNLP (<code>corenlp</code>)</h3>
+  <p>CoreNLP Annotationen unterstützen die folgenden Layer für das <code>corenlp</code> Präfix:</p>
   <dl>
     <dt><abbr data-type="token" title="Part-of-Speech">p</abbr></dt>
     <dd>Part-of-Speech-Informationen werden in Großbuchstaben geschrieben und basieren auf STTS</dd>
     <dt><abbr data-type="token" title="Constituency">c</abbr></dt>
-    <dd>Konstituenten Informationen folgen den Annotationen des <a href="http://www.coli.uni-saarland.de/projects/sfb378/negra-corpus/negra-corpus.html">negr@ Korpus</a>.</dd>
+    <dd>Konstituenten Informationen folgen den Annotationen des <%= doc_ext_link_to 'negr@ Korpus', 'http://www.coli.uni-saarland.de/projects/sfb378/negra-corpus/negra-corpus.html' %>.</dd>
     <dt><abbr data-type="token" title="Named Entity">ne</abbr></dt>
     <dd>Enthält benannte Entitäten wie <code>I-PER</code>, <code>I-ORG</code> etc.</dd>
     <dt><abbr data-type="token" title="Named Entity">ne_hgc_175m_600</abbr></dt>
@@ -50,6 +68,7 @@
 
 <section id="tt">
   <h3>TreeTagger (<code>tt</code>)</h3>
+  <p>TreeTagger Annotationen unterstützen die folgenden Layer für das <code>tt</code> Präfix:</p>
   <dl>
     <dt><abbr data-type="token" title="Lemma">l</abbr></dt>
     <dd>Alle Nicht-Nomen-Lemmata sind in Kleinbuchstaben geschrieben, Substantive sind in Großbuchstaben geschrieben. Komposita bleiben intakt (z. B. <code>Normalbedingung</code>).</dd>
@@ -59,7 +78,7 @@
   %= doc_query poliqarp => '[tt/p=ADV]', cutoff => 1
 </section>
 
-
+<!--
 <section id="mate">
   <h3>Mate (<code>mate</code>)</h3>
   <dl>
@@ -72,15 +91,40 @@
   </dl>
   %= doc_query poliqarp => '[mate/m=gender:fem]', cutoff => 1
 </section>
+-->
+
+<section id="malt">
+  <h3>Malt (<code>malt</code>)</h3>
+  <p>Malt Annotationen unterstützen die folgenden Layer für das <code>malt</code> Präfix:</p>
+  <dl>
+    <dt><abbr data-type="token" title="Lemma">d</abbr></dt>
+    <dd>Dependenz-Annotation</dd>
+  </dl>
+  %= doc_query annis => 'tt/p="PPOSAT" ->malt/d[func="DET"] node', cutoff => 1
+</section>
 
 
 <section id="opennlp">
   <h3>OpenNLP (<code>opennlp</code>)</h3>
+  <p>OpenNLP Annotationen unterstützen die folgenden Layer für das <code>opennlp</code> Präfix:</p>
   <dl>
     <dt><abbr data-type="token" title="Part-of-Speech">p</abbr></dt>
     <dd>Alle Part-of-Speech-Informationen sind in Großbuchstaben geschrieben und basieren auf STTS</dd>
   </dl>
   %= doc_query poliqarp => '[opennlp/p=PDAT]', cutoff => 1
+</section>
+
+
+<section id="marmot">
+  <h3>Marmot (<code>marmot</code>)</h3>
+  <p>Marmot Annotationen unterstützen die folgenden Layer für das <code>marmot</code> Präfix:</p>
+  <dl>
+    <dt><abbr data-type="token" title="Part-of-Speech">p</abbr></dt>
+    <dd>Alle Part-of-Speech-Informationen sind in Großbuchstaben geschrieben und basieren auf STTS</dd>
+    <dt><abbr data-type="token" title="Morphosyntactical information">m</abbr></dt>
+    <dd>Enthält annotationen zu case (<code>acc</code> ...), degree (<code>pos</code>), gender (<code>fem</code> ...) etc.</dd>
+  </dl>
+  %= doc_query poliqarp => '[marmot/m=degree:sup & marmot/p=ADJA]', cutoff => 1
 </section>
 
 <!--
@@ -107,6 +151,9 @@
     <li><strong>orth</strong>: <code>opennlp</code></li>
     <li><strong>lemma</strong>: <code>tt</code></li>
     <li><strong>pos</strong>: <code>tt</code></li>
+    <li>Constituency: <code>corenlp</code></li>
+    <li>Dependency: <code>malt</code></li>
+    <li>Morphology: <code>marmot</code></li>
   </ul>
 
   <blockquote>
